# keel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.claude/commands/: bug-fix.md  done-session.md  hotfix.md  new-feature.md  next-session.md  orchestrate.md  plan-feature.md  verify.md
.claude/contracts/: events.schema.json
.claude/guardrails/: QUICK-REF.md  financial-rules.md  forbidden-patterns.md  frontend-practices.md  owasp-top10.md  python-practices.md
.claude/sessions/: SESSION-INDEX.md  SESSION-REFERENCE.md
.claude/sessions/gap-1-settings/: sg1.1-db-schema.md  sg1.2-api.md  sg1.3-web-ui.md  sg1.4-tests.md
.claude/sessions/phase-0-foundation/: s0.1-monorepo.md  s0.2-docker-and-shared-backend.md
.claude/sessions/phase-1-auth/: s1.1-db-schema.md  s1.2-keycloak-realm.md  (+4 more)
.claude/templates/: handoff-template.md
.claude/workflows/: agent-loop.md
.github/workflows/: ci.yml
backend/gateway/: Dockerfile  main.py  pyproject.toml
backend/services/documents/: Dockerfile  main.py  models.py  pyproject.toml  repository.py  requirements.txt  router.py  schemas.py  storage.py
backend/services/invoice/: Dockerfile  email.py  main.py  models.py  pdf.py  pyproject.toml  repository.py  requirements.txt  router.py  schemas.py
backend/shared/: config.py  pyproject.toml  result.py
backend/shared/events/: __init__.py  definitions.py  publisher.py
backend/shared/middleware/: __init__.py  auth.py
backend/shared/models/: __init__.py  base.py
backend/shared/outbox/: __init__.py  models.py  worker.py
backend/tests/: test_deadlines.py  test_tax_calculators.py  test_tax_router_helpers.py
docs/: USER_GUIDE.md
infrastructure/: docker-compose.prod.yml  docker-compose.yml
infrastructure/keycloak/: realm-export.json
mobile/: app.json  package.json  tsconfig.json
mobile/app/: _layout.tsx
mobile/lib/: auth.ts
mobile/stores/: auth.ts
scripts/: setup-github-issues.sh
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+154 files in other folders)
