[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "keel-gateway"
version = "0.1.0"
description = "Keel API Gateway — routing and auth middleware"
requires-python = ">=3.12"
dependencies = [
    "keel-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
