[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel-shared"
version = "0.1.0"
description = "Shared patterns and utilities for Keel backend services"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aio-pika>=9.4.0",
    "redis[hiredis]>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "B008",   # FastAPI Depends() in argument defaults — standard pattern
  "UP046",  # Generic[T] subclass — valid Python 3.12, no migration needed
]

[tool.mypy]
python_version = "3.12"
strict = true
