[project]
name = "keel-document-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "keel-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "boto3>=1.34.0",
    "pillow>=10.3.0",
]
